Fixed sidebar styling: add spacing at bottom

--- a/web/htdocs/sidebar.css
+++ b/web/htdocs/sidebar.css
@@ -85,7 +85,7 @@ body.side {
     overflow: hidden;
     color: #000000;
     padding-top: 60px;
-    padding-bottom: 5px;
+    padding-bottom: 8px;
 }
 
 /* The footer of the sidebar */
